# agentmetrics

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml
api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  cli.py  daemon.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_placeholder.py  003_password_reset.py  004_data_integrity.py  005_agents_metadata.py  006_steps_table.py  007_metrics_aggregation.py  008_recommendations_alerts.py  009_org_settings.py  010_schema_fixes.py  011_perf_indexes.py  012_v2_schema_promotion.py  013_remove_supabase_add_password.py  014_schema_hardening.py  015_api_key_auth.py  016_phase3_observability.py
api/app/: config.py  database.py  db_compat.py  deps.py  hooks.py  main.py  worker.py
api/app/core/: activity_store.py  pricing.py  rate_limit.py
api/app/models/: __init__.py  event.py  metrics.py  organization.py
api/app/routers/: activity.py  agents.py  alerts.py  audit.py  auth.py  events.py  fleet.py  infra.py  recommendations.py  runs.py  slo.py  stats.py
api/app/schemas/: activity.py  agent.py  auth.py  event.py
api/app/services/: agent_service.py  aggregation_service.py  alert_service.py  email_service.py  recommendation_service.py
api/tests/: conftest.py  test_agents.py  test_auth.py  test_event_ingest.py  test_events.py  test_pricing.py
(+83 files in other folders)
