[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmetrics-server"
version = "0.1.0"
description = "AgentMetrics - self-hosted AI agent observability server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "email-validator==2.1.1",
    "APScheduler==3.10.4",
    "requests==2.32.3",
    # PostgreSQL (optional - not needed for SQLite)
    # "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.9"]
[project.scripts]
agentmetrics-server = "cli:serve"

[tool.hatch.build.targets.wheel]
include = [
    "app/**",
    "alembic/**",
    "alembic.ini",
    "cli.py",
    "daemon.py",
    # Pre-built dashboard SPA (copy dashboard/dist → app/static before building wheel)
    "app/static/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "app/**",
    "alembic/**",
    "alembic.ini",
    "cli.py",
    "daemon.py",
    "requirements.txt",
    "app/static/**",
]
